Keep editor on top to prevent test errors on iOS

--- a/test/assets/test.css
+++ b/test/assets/test.css
@@ -1,1 +1,5 @@
 /*= require qunit */
+
+#trix_container {
+  height: 150px;
+}
